; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/atl/extr_atl_ax.c_IOCS_OnWndProc.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/atl/extr_atl_ax.c_IOCS_OnWndProc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32, i32, i32, i32)* @IOCS_OnWndProc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IOCS_OnWndProc(%struct.TYPE_7__* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %8, align 4
  switch i32 %16, label %35 [
    i32 131, label %17
    i32 128, label %20
    i32 129, label %28
    i32 130, label %32
  ]

17:                                               ; preds = %5
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %19 = call i32 @IOCS_Detach(%struct.TYPE_7__* %18)
  br label %35

20:                                               ; preds = %5
  %21 = load i32, i32* %10, align 4
  %22 = call i32 @LOWORD(i32 %21)
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @HIWORD(i32 %23)
  %25 = call i32 @SetRect(i32* %12, i32 0, i32 0, i32 %22, i32 %24)
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %27 = call i32 @IOCS_OnSize(%struct.TYPE_7__* %26, i32* %12)
  br label %35

28:                                               ; preds = %5
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @IOCS_OnShow(%struct.TYPE_7__* %29, i32 %30)
  br label %35

32:                                               ; preds = %5
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %34 = call i32 @IOCS_OnDraw(%struct.TYPE_7__* %33)
  br label %35

35:                                               ; preds = %5, %32, %28, %20, %17
  %36 = load i32, i32* %11, align 4
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* %8, align 4
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* %10, align 4
  %41 = call i32 @CallWindowProcW(i32 %36, i32 %37, i32 %38, i32 %39, i32 %40)
  ret i32 %41
}

declare dso_local i32 @IOCS_Detach(%struct.TYPE_7__*) #1

declare dso_local i32 @SetRect(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i32 @HIWORD(i32) #1

declare dso_local i32 @IOCS_OnSize(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @IOCS_OnShow(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @IOCS_OnDraw(%struct.TYPE_7__*) #1

declare dso_local i32 @CallWindowProcW(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
